--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,14 @@
 # Site settings
-title: Rifyll
-email: somename@somedomain.com
-description: "Just Another Jekyll Theme"
-logo_location: "https://placeholdit.imgix.net/~text?txtsize=30&bg=F8F8F8&txtclr=002E62&txt=LOGO&w=100&h=100"
-
-#baseurl: "" # the subpath of your site, e.g. /blog/
-#url: "" # the base hostname & protocol for your site
+title: Ion
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "/Read-Only-Jekyll-Theme" # the subpath of your site, e.g. /blog/
+url: "http://yourdomain.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-kramdown:
-  input: GFM
-
-highlighter: pygments
-
-#Other Global Configuration
-exclude: ['README.md']
-
-excerpt_separator: <!--more-->
-
-#show the jumbotron header on index page
-show_blog_header: true
